# doomguy-status

./: README.md  i3_daemon.py  pyproject.toml  render  render.py
doomguy_status/: i3_daemon.py  render.py
