[tool.poetry]
name = "doomguy-status"
version = "1.0.0"
description = "DOOM Status Bar"
authors = ["Oakley Reid <oakreid@gmail.com>"]
repository = "https://github.com/oakreid/doomguy-status"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.3.0"
plumbum = "^1.7.0"
psutil = "^5.8.0"
i3ipc = {version = "^2.2.0", optional = true}

[tool.poetry.extras]
i3 = ["i3ipc"]
